--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -27,7 +27,7 @@
         transform: translateY(0%);
     }
 }
-
+/////////////
 @keyframes animatedDot {
     0% {
         opacity: 0;
@@ -70,14 +70,5 @@
     100% {
         opacity: 0;
         transform: scale(1.2);
-    }
-}
-
-@keyframes opacityIncrease {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
