--- a/src/styles/_downScreen.scss
+++ b/src/styles/_downScreen.scss
@@ -6,7 +6,7 @@
     background-size: cover;
     display: flex;
     position: fixed;
-    top: 100%;
+    top: 0;
     left: 0;
     z-index: 100;
     transform: translateY(100%);
@@ -53,14 +53,4 @@
             }
         }
     }
-}
-
-.startAnimation {
-    transform: translateY(0%);
-    animation: openMenu .4s linear;
-}
-
-.closeAnimation {
-    transform: translateY(100%);
-    animation: closeMenu .4s linear;
 }
